Optimize api get url